# mbit_ping_pong

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs  monotonic_nrf52.rs
