[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
cortex-m-rtic = { version = "1.0.0", default-features = false }
embedded-hal = "1.0.0"
systick-monotonic = "1.0.0"
rtt-target = "0.5.0"
nrf52833-hal = { version = "0.18.0", features = ["rt"] }

