[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
nrf52833-hal = { version = "0.18.0", features = ["rt"] }
rtt-target = "0.5.0"
rtic-monotonic = "1.0.0"
fugit = "0.3.7"
